[package]
name = "breakout"
version = "0.1.0"
edition = "2021"
exclude = ["assets/"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1"}
rand = { version = "0.8.5", features = [] }
serde = "1.0.194"
serde_json = "1.0.110"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"